<resources>
    <string name="app_name">FireTracker</string>
    <string name="welcome">Bem-vindo ao FireTracker</string>
    <string name="subtitle">Projeto Computação Móvel 21/22 </string>
    <string name="fire_map">Mapa de fogos</string>
    <string name="fire_list">Lista de fogos</string>
    <string name="new_fire">Novo registo</string>
    <string name="idk">ALIGATOOOO</string>
    <string name="exit">Encerrar a aplicação</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_closed">Fechado</string>
    <string name="newRegister">Efetue aqui o registo do incêndio</string>
    <string name="name">Nome</string>
    <string name="cc">Nº Cartão Cidadão</string>
    <string name="district">Distrito</string>
    <string name="time">Data e Hora</string>
    <string name="photo">Fotografia(Opcional)</string>
    <string name="send">Enviar</string>
    <string name="no_list">Não existem fogos</string>
    <string name="region">Região</string>
    <string name="region_fires">Fogos na região</string>
    <string name="region_risk">Risco na região</string>
    <string name="total_fires">Nº total de fogos</string>
    <string name="fire_average">Média de fogos na região</string>
    <string name="select_region">Lisboa \n (Clique para alterar)</string>
    <string name="county">Conselho</string>
    <string name="parish">Freguesia</string>
    <string name="firemen">Meios operacionais</string>
    <string name="vehicles">Meios terrestres</string>
    <string name="air_support">Meios aéreos</string>
    <string name="fire_state">Estado do incêndio</string>
    <string name="foto">Fotos</string>
    <string name="obs">Observações</string>
    <string name="another_info">por mudar</string>
    <string name="inf_not_available">Informação não disponível</string>
    <string name="click">Clique para escolher</string>
    <string name="confirm">Por confirmar</string>
    <string name="choose_region">Escolha a região</string>
    <string name="fields">Preecha todos os campos</string>
    <string name="register">Lista atualizada</string>
    <string name="chart_name">Gráfico</string>
    <string name="chart">Gráfico</string>
    <string name="no_permission">Não tem permissão para ler arquivos</string>
    <string name="chosen">Escolhido</string>
    <string name="dashboard">Dashboard</string>
    <string name="filters">Filtros</string>
    <string name="_50km">50 Km</string>
    <string name="_150km">150 Km</string>
    <string name="_300km">300 Km</string>
    <string name="raio">Escolha o raio pretendido</string>
    <string name="district_filters">Escolha um distrito</string>
    <string name="submit">Submeter</string>
    <string name="meios_operacionais">Filtrar por meios operacionais</string>
    <string name="estado_fogo">Filtrar por estado do fogo</string>
    <string name="decorrer">A decorrer</string>
    <string name="concluido">Concluido</string>
    <string name="location">Localização</string>
    <string name="lisboa">Lisboa</string>
    <string name="reduzido">Reduzido</string>
    <string name="filtros_aplicados">Filtros aplicados</string>




</resources>